--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: c
 compiler:
   - gcc
-  - clang
 before_install:
   - git submodule update --init --recursive
   - sudo apt-get update -qq
@@ -10,7 +9,7 @@ script:
   - make -C BaseTools
   - export EDK_TOOLS_PATH=$(pwd -P)/BaseTools
   - . edksetup.sh BaseTools
-  - sed 's/^ACTIVE_PLATFORM.*/ACTIVE_PLATFORM=Clover\/Clover.dsc/g'
-  - sed 's/^TOOL_CHAIN_TAG.*/TOOL_CHAIN_TAG=GCC46/g'
-  - sed 's/^TARGET_ARCH.*/TARGET_ARCH=IA32 X64/g'
+  - sed 's/^ACTIVE_PLATFORM.*/ACTIVE_PLATFORM=Clover\/Clover.dsc/g' -i $WORKSPACE/Conf/target.txt
+  - sed 's/^TOOL_CHAIN_TAG.*/TOOL_CHAIN_TAG=GCC46/g' -i $WORKSPACE/Conf/target.txt
+  - sed 's/^TARGET_ARCH.*/TARGET_ARCH=IA32 X64/g' -i $WORKSPACE/Conf/target.txt
   - build
