--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ compiler:
   - gcc
 before_install:
   - git submodule update --init --recursive
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -qq build-essential subversion uuid-dev iasl nasm
+  - sudo apt-get install -qq build-essential subversion uuid-dev iasl nasm gcc-4.9
 script:
   - make -C BaseTools
   - export EDK_TOOLS_PATH=$(pwd -P)/BaseTools
