--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
   - sudo apt-get install -qq build-essential subversion uuid-dev iasl nasm gcc-4.9
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20
+  - sudo update-alternatives --config gcc
+  - sudo update-alternatives --config g++
+  - g++ --version
+  - gcc --version
 script:
   - make -C BaseTools
   - export EDK_TOOLS_PATH=$(pwd -P)/BaseTools
