--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,23 @@ before_install:
   - git submodule update --init --recursive
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -qq build-essential subversion uuid-dev iasl nasm gcc-4.9 g++-4.9
+  - sudo apt-get install -qq build-essential subversion uuid-dev iasl gcc-4.9 g++-4.9
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20
   - sudo update-alternatives --config gcc
   - sudo update-alternatives --config g++
   - g++ --version
   - gcc --version
+  - mkdir nasm
+  - cd nasm
+  - wget http://www.nasm.us/pub/nasm/releasebuilds/2.11.06/nasm-2.11.06.tar.xz
+  - tar xf nasm-2.11.06.tar.xz
+  - cd nasm-2.11.06
+  - ./configure --prefix=/usr
+  - make
+  - sudo make install
+  - cd ../../
+  - rm -r nasm
 script:
   - make -C BaseTools
   - export EDK_TOOLS_PATH=$(pwd -P)/BaseTools
