Build for both IA32 and X64

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ script:
   - . edksetup.sh BaseTools
   - sed 's/^ACTIVE_PLATFORM.*/ACTIVE_PLATFORM=Clover\/Clover.dsc/g' -i $WORKSPACE/Conf/target.txt
   - sed 's/^TOOL_CHAIN_TAG.*/TOOL_CHAIN_TAG=GCC49/g' -i $WORKSPACE/Conf/target.txt
-  - sed 's/^TARGET_ARCH.*/TARGET_ARCH=IA32/g' -i $WORKSPACE/Conf/target.txt
-  - build
+  - build -a IA32
+  - build -a X64
